--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1226,7 +1226,23 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 .form-btn:disabled:hover::before { background: var(--bg-gradient-jet); }
 
+  .trailer-video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 ratio */
+  /* height: 0; */
+  overflow: hidden;
+  /* max-width: 100%; */
+  /* background: #000; */
+  border-radius: 12px;
+}
 
+.trailer-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 
 
